# Distributed-repl

./: Lib.hs  README.md  exampleSctipt.txt  script.txt  stack.yaml
.stack-work/downloaded/: uWgBdjeWTeFI.http-archive
.stack-work/downloaded/uWgBdjeWTeFI/webviewhs-21ddd4b4872b2e7eb50c9735e70cfbdedf2c6c1a/examples/: how-do-i-inject-some-custom-css-into-the-window.hs
.stack-work/ghci/02111e6c/: cabal_macros.h
.stack-work/ghci/44584f7c/: cabal_macros.h
.stack-work/ghci/49dce6ad/: cabal_macros.h
.stack-work/ghci/9b70c61e/: cabal_macros.h
.stack-work/ghci/b6a4a926/: cabal_macros.h
.stack-work/install/x86_64-osx/lts-11.22/8.2.2/flag-cache/: Cabal-2.0.1.1-K7BBuT85dPfIf5Y1YG7kmd  aeson-1.2.4.0-8ZbY4vd2LgY7F8UuUwuNPD  attoparsec-0.13.2.2-7m8EMhjHWEU1qZDcRdaNek  base-compat-0.9.3-915GC5pH10BBmcMnCvMsPA  case-insensitive-1.2.0.11-IrDZdishAUyHDGx4Xozuda  clay-0.12.2-5Y9PmoctwuYJzeeKjOClpX  client-0.1.0.0-Ix7isKqJqNm5h3kTNpeeTu  cpphs-1.20.8-7iF1YhjQyuE5TTeIoVFGwX  data-accessor-0.2.2.7-1RPXQkvjBvuCNrCfGxqJoC  data-default-0.7.1.1-HxP9sk0JsrKFuLVc9OIluX  data-default-class-0.1.2.0-8hmGYd6GPAfLQPQcWKOjRm  data-default-instances-containers-0.0.1-A7WE5ZxkyD2DXghs3tnK2n  data-default-instances-dlist-0.0.1-IlYPMkK671u6y0SAhqz2xi  data-default-instances-old-locale-0.0.1-Hiyo1MhB69LBEzLtsKujf7  distributed-process-0.7.4-ECgLZ7T2iRv413cyzHSvEE  distributed-process-0.7.4-KNFRyyESMD7FRqNlfZZoj2  distributed-static-0.3.8-J71VEstE3q1134khXj24LB  distributed-static-0.3.9-6RSMyFX9sHH5SRBOOGpsJy  dlist-0.8.0.4-C5jxmU4NyxKI1pN7pAcXnu  exceptions-0.8.3-1Z1h6KbYt7O8icU4kTqQLB  happy-1.19.9  hashable-1.2.7.0-DjE7CO6oYcN82xVf1NPP65  haskell-src-exts-1.20.2-8rCl2uwiCnZ8JJvUnNLkk0  haskell-src-meta-0.8.0.3-4yTG9iEntqqFCrTMmLI1n5  integer-logarithms-1.0.2.1-9FlF2TwmQfUAjNFqig9Opi  jmacro-0.6.15-K8lYnD6IOfQ42wzE1TdnlV  jmacro-0.6.16-FVKCAvlTENI2FfKpbflURI  megaparsec-6.4.1-KBdFCfrizny2ifM7CotMya  mtl-2.2.2-8XubxMJDT8QLsstvlNotkc  network-transport-0.5.2-Kt1JDXuffCTAy0QDIeN8xd  old-locale-1.0.0.7-uLYLcRn7Nv8SkmeS8fMf9  old-time-1.1.0.3-LmKk8FUXtYwDVw5bR99HBe  parseargs-0.2.0.8-28MfuyO7B5aF1IXr5es5h9  parsec-3.1.13.0-4lTb3cXTd6HHEFinUR9C9w  parser-combinators-0.4.0-LXzRXKyLrFT6DPfieme8NK  polyparse-1.12-A8a8uzYU1h78NbtZhKCUyg  primitive-0.6.4.0-kK2x3tDWKdAgEjt22m9eJ  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  rank1dynamic-0.4.0-L1zW7nfwSyY5tNCLlLU1JD  regex-base-0.93.2-LSiJfnsHnID1Pcep8QFg9q  (+23 more)
.stack-work/install/x86_64-osx/lts-11.22/8.2.2/pkgdb/: client-0.1.0.0-3fs91LC6kDPDvpjHZHaccV.conf  package.cache  text-format-heavy-0.1.5.2-J7iJNwFxEXV6WJcz2ooGh9.conf  webviewhs-0.1.0.0-Cey2FQgCnEHGWxfuNCCwdD.conf
.stack-work/install/x86_64-osx/lts-12.26/8.4.4/flag-cache/: StateVar-1.1.1.1-95mVnsqAWWrCsY5lrWtwY9  adjunctions-4.4-1WSDEnXzInPIG3pT1MikxZ  alex-3.2.4  base-orphans-0.7-85wcea2rRmdArILlfYz5fz  basic-0.1.0.0-Agdg3kjVr18GsezCMfDoag  bifunctors-5.5.3-KgxhKa9dYG85PMnlSRdHyc  cabal-doctest-1.0.6-E57gwmEN5fa2uY0bq8bb44  cairo-0.13.5.0-JD85jA170sOHYb1qipxHLj  case-insensitive-1.2.0.11-DPTULSc13Hb5QvymDTYpkJ  client-0.1.0.0-3KC4thVVHu15Iljyod1FQe  client-0.1.0.0-3kEcY0gBA0019qlZjbhbE6  client-0.1.0.0-5EnHDSXMMAl118E2Z2kL65  client-0.1.0.0-5P1SDRScDKzGSQd2mrwumM  client-0.1.0.0-7gOKoMfK9eg2HqRoUwuS2Z  client-0.1.0.0-9Y6u4fYsVyG8ZRIxycSMAM  comonad-5.0.4-ItHAIKdzWqd5zksrgP0NiC  contravariant-1.4.1-4LBnLmjGJk0IcFfYRtdVxg  control-0.1.1.0-1kcYflgwy0s3uymTwpDqwZ  data-accessor-0.2.2.8-3naQwZ1ZYV5BVvxXFURGeg  dbworker-0.1.0.0  distributed-process-0.7.4-El66EZ9yCnK69YoxvjUCpC  distributed-static-0.3.8-IroIyvx1eE59PkHKs4a9np  distributive-0.5.3-ChQZWQR3gTh1FcCfULJsdF  exceptions-0.10.0-JdJQCUTN2IdByiFiErotXH  free-5.0.2-KzBG9Ugkai0L9o2WK7CTri  gio-0.13.5.0-G7CtCedilKy2yD8kZuZLTr  glib-0.13.6.0-GT82f2v3zARFQwvAkc7tie  gtk2hs-buildtools-0.13.4.0-AqXMtDxc6SZ6we80paPomo  happy-1.19.9  hashable-1.2.7.0-DdCYvJcZvRI4ppJaB9D3c  hashtables-1.2.3.1-9D8tOlocdWsAh6q3RkpmXS  haskell-src-1.0.3.0-L8qCfH4pvJCHVOth3UmRjg  hoppy-generator-0.5.2-AKTN8rrho7X1zefzQCB1Qo  hoppy-runtime-0.5.1-Br7gf4JqazWFWutcmKzVms  hoppy-std-0.5.0-7yYin9U9DjuGwNvPGCameK  integer-logarithms-1.0.2.2-5NWBguJdcui1fNVng5frMO  invariant-0.5.1-4HKZzIWFAlGIlEXsMl23CY  kan-extensions-5.2-HPyc36OKSBIDsf3GHJ4xzB  lens-4.16.1-35w7ecsd6MPAgTB53OhXcP  master-0.1.0.0  (+35 more)
.stack-work/install/x86_64-osx/lts-12.26/8.4.4/pkgdb/: basic-0.1.0.0-Agdg3kjVr18GsezCMfDoag.conf  client-0.1.0.0-2otZ1nLTSSxDNDXeH3pKHr.conf  control-0.1.1.0-1kcYflgwy0s3uymTwpDqwZ.conf  distributed-process-0.7.4-El66EZ9yCnK69YoxvjUCpC.conf  hoppy-generator-0.5.2-AKTN8rrho7X1zefzQCB1Qo.conf  hoppy-runtime-0.5.1-Br7gf4JqazWFWutcmKzVms.conf  hoppy-std-0.5.0-7yYin9U9DjuGwNvPGCameK.conf  network-transport-tcp-0.6.0-D020VlME4u73Eme7aRyhKT.conf  package.cache  qtah-cpp-qt5-0.5.1-3YCw8FaqQwY2tNfxvFT0CN.conf  qtah-generator-0.5.0-BYEi4aC7QOJ311eATEu7dj.conf  qtah-qt5-0.5.1-GVcNmIPr3qv8wrGnRBrSCF.conf  utils-0.1.0.0-BZjJqld5fnPXsXgmebWNy.conf  worker-0.1.0.0-5j3scUJJaukJBHFJZP9uqU.conf
.stack-work/install/x86_64-osx/lts-13.12/8.6.4/flag-cache/: Cabal-2.4.1.0-9MZFDeNrcJI10bcroa6pq8  HTTP-4000.3.12-Li8JQTobINq3DEyWOsHOuK  aeson-1.4.2.0-48bBLJZZJYU6AziQzFtKgm  alex-3.2.4  async-2.2.1-4fWSSJ8SFccIxQJVItkRnX  attoparsec-0.13.2.2-ICn5PHFefx0J9l9gVufeMB  base-compat-0.10.5-FRXoAxOVtbG2qLNIZm1tTr  base16-bytestring-0.1.1.6-17atVnUhDnM13pAkKbwL6I  base64-bytestring-1.0.0.2-9zRsxWrEm5zGbLjNlDas  binary-0.8.6.0-YDVsg5kaFTIEcWgKfbPEq  blaze-builder-0.4.1.0-KrFxFv3kgua3BTNMsMBadC  blaze-html-0.9.1.1-E0enfQtU1ZTDNQ8G8pIpJp  blaze-markup-0.8.2.2-IwLwNWRUxfsEuYbkQ0Gv5Q  cabal-install-2.4.1.0  cairo-0.13.6.0-DAl3jYZkCfDIEM1xFMsHj  case-insensitive-1.2.0.11-E67HlZTTn1x5bftXdl0VFS  case-insensitive-1.2.0.11-GGYU9CY9cs88wywgwHVKC6  (+94 more)
client/: client.cabal
client/app/: Main.hs
client/src/: Lib.hs
dbmaster/: dbmaster.cabal
dbmaster/app/: Main.hs
dbworker/: dbworker.cabal
dbworker/app/: Main.hs
dbworker/src/: Lib.hs
master/: master.cabal
master/app/: Main.hs
utils/: utils.cabal
utils/src/: Lib.hs  Messages.hs  NetworkUtils.hs
worker/: README.md  worker.cabal
worker/app/: Main.hs
worker/src/: Lib.hs
(+1833 files in other folders)
