name:                dbworker
version:             0.1.0.0
synopsis:            Synopsis for dbworker
description:         Database_master is a master for a distributed database

homepage:            https://github.com//haskell_project/tree/master/master#readme
license:             MIT
license-file:        LICENSE
author:              Vadim Briliantov
maintainer:          v.brilyantov@gmail.com
copyright:           2019 Vadim Briliantov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:
      base  >= 4.8 && < 5
      , containers
      , mtl
      , utf8-string
      , bytestring
      , directory
      , exceptions
      , network
      , network-transport
      , network-transport-tcp
      , binary
      , utils
      , sqlite-simple
      , easy-file
      , text
  default-language:    Haskell2010

executable dbworker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -XOverloadedStrings -dynamic
  build-depends:
      base  >= 4.8 && < 5
      , containers
      , utf8-string
      , bytestring
      , network
      , network-transport
      , network-transport-tcp
      , binary
      , utils
      , dbworker
  default-language:    Haskell2010
