name:                worker
version:             0.1.0.0
synopsis:            Synopsis for worker
description:         worker is a worker

homepage:            https://github.com//haskell_project/tree/worker/worker#readme
license:             MIT
license-file:        LICENSE
author:              Vadim Briliantov
maintainer:          v.brilyantov@gmail.com
copyright:           2019 Vadim Briliantov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:
      base  >= 4.8 && < 5
      , containers
      , mtl
      , megaparsec
      , utf8-string
      , bytestring
      , directory
      , exceptions
      , network
      , network-transport
      , network-transport-tcp
      , binary
      , utils
  default-language:    Haskell2010

executable worker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -XOverloadedStrings -dynamic
  build-depends:
      base  >= 4.8 && < 5
      , containers
      , mtl
      , megaparsec
      , utf8-string
      , bytestring
      , directory
      , exceptions
      , network-transport
      , qtah-qt5
      , hoppy-runtime >=0.5 && <0.6
      , network
      , network-transport
      , network-transport-tcp
      , binary
      , utils
      , worker
  default-language:    Haskell2010

test-suite worker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , worker
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
